test/end-to-end/compile-errors/far-return-bogus.crow
main void()
	(() => x) foo

foo void(_ far string())
	()
